# pqtable

./: .gitignore  CMakeLists.txt  README.md
examples/: demo_sift1b_build_table.cpp  demo_sift1b_encode.cpp  demo_sift1b_search.cpp  demo_sift1b_train.cpp  demo_siftsmall.cpp
scripts/: download_sift1b.sh  download_siftsmall.sh  eval.py
src/: code_to_key.cpp  code_to_key.h  pq.cpp  pq.h  pq_key_generator.cpp  pq_key_generator.h  pq_table.cpp  pq_table.h  utils.cpp  utils.h
src/sparse_hashtable/: array32.cpp  array32.h  bucket_group.cpp  bucket_group.h  helper_sht.cpp  helper_sht.h  sparse_hashtable.cpp  sparse_hashtable.h  types.h
